<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.mine.dubbo.example</groupId>
    <artifactId>dubbo-example</artifactId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>
  <groupId>com.mine.dubbo.example.web</groupId>
  <artifactId>dubbo-example-web</artifactId>
  <version>${project.version}</version>
	<packaging>war</packaging>

	<dependencies>
		<dependency>
			<groupId>com.mine.dubbo.example.common</groupId>
			<artifactId>dubbo-example-common</artifactId>
			<version>${project.version}</version>
		</dependency>
	</dependencies>
	
	<profiles>
		<profile>
			<!-- 本地环境 -->
			<id>development</id>
			<properties>
				<jdbc.url>192.168.198.128:3306/study_dev</jdbc.url>
				<jdbc.user>yql</jdbc.user>
				<jdbc.passwd>yql</jdbc.passwd>
				<jdbc.initialSize>1</jdbc.initialSize>
				<jdbc.maxIdle>1</jdbc.maxIdle>
				<jdbc.maxActive>2</jdbc.maxActive>
				<jdbc.maxWait>3000</jdbc.maxWait>
				<config.url>www.baidu.com</config.url>
				<zookeeper.server>192.168.198.128:2181?backup=192.168.198.131:2181</zookeeper.server>
				<!-- <dubbo.host>192.168.198.128</dubbo.host>
				<dubbo.port>28042</dubbo.port> -->
			</properties>
			<!-- 指定默认启动配置 -->
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
		<profile>
			<!-- sit环境 -->
			<id>test</id>
			<properties>
				<jdbc.url>127.0.0.1:3306/sit</jdbc.url>
				<jdbc.user>yql</jdbc.user>
				<jdbc.passwd>yql</jdbc.passwd>
				<jdbc.initialSize>1</jdbc.initialSize>
				<jdbc.maxIdle>1</jdbc.maxIdle>
				<jdbc.maxActive>2</jdbc.maxActive>
				<jdbc.maxWait>3000</jdbc.maxWait>
				<config.url>www.baidu1.com</config.url>
			</properties>
		</profile>
	</profiles>

	<build>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<!-- 编译打包的文件名，默认artifactId加时间戳 -->
		<finalName>dubbo-example-web</finalName>

		<plugins>
			<!-- 指定编译时候jdk版本号和编码 -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<encoding>utf-8</encoding>
					<source>1.7</source>
					<target>1.7</target>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>${jetty.version}</version>
				<configuration>
					<contextPath>/</contextPath>
					<scanIntervalSeconds>2</scanIntervalSeconds><!-- 每2秒的间隔扫描一次,实现热部署 --> 
					<connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>9035</port>
						</connector>
					</connectors>
					<systemProperties>
						<systemProperty>
							<name>MAVEN_OPTS</name>
							<value>"-Xms512m -Xmx1024m -XX:MaxPermSize=384m"</value>
						</systemProperty>
						<systemProperty>
							<name>JVM-ARG</name>
							<value>"-XX:MaxPermSize=386m"</value>
						</systemProperty>
						<systemProperty>
							<name>JAVA_OPTS</name>
							<value>"-Xms512m -Xmx1024m"</value>
						</systemProperty>
					</systemProperties>
					<webDefaultXml>src/main/resources/webdefault.xml</webDefaultXml>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<additionalProjectnatures>
						<projectnature>
							org.springframework.ide.eclipse.core.springnature
						</projectnature>
					</additionalProjectnatures>
					<additionalBuildcommands>
						<buildcommand>
							org.springframework.ide.eclipse.core.springbuilder
						</buildcommand>
					</additionalBuildcommands>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<wtpversion>1.5</wtpversion>
				</configuration>
			</plugin>
			<!-- 指定字符集 -->
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<!-- 单元测试插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<!-- <skip>true</skip> -->
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>